# tello_ros_ws

./: .gitmodules
cmd/: command_230918_threeDrone  command_230928_single_square  command_230928_threeDrone  command_231004_single_square  command_231010_single_rotation  command_231011_single_rotation  command_231101_threeDrone  command_240106_Tracking  command_240106_faceOdom  command_240106_multiDroneVIO  command_240106_threeDrone  command_240308_TwoTracking  command_240312_singleDroneVIO  formation_ctrl_sim_240203  record_camera_tilt_231114  replay_240305_singleDroneVIO
src/record_rosbag/: CMakeLists.txt  package.xml
src/record_rosbag/launch/: pclToOdom.launch  record_rosbag_240106.launch  record_rosbag_TwoDrone_240313.launch  record_rosbag_manual_240312.launch  record_rosbag_manual_square_230907.launch  record_rosbag_sim_240203.launch  record_rosbag_threeTello_230918.launch  record_rosbag_threeTello_231031.launch  replay_eskf_240321.launch  replay_record_VIO.launch  replay_record_eskf_230905.launch  replay_record_eskf_231104.launch  replay_record_eskf_delay_240314.launch  replay_record_eskf_face_240315.launch  replay_record_eskf_face_noLidar_delay_240315.launch  replay_record_eskf_new_240305.launch  replay_record_faceOdom.launch  replay_record_square_traj.launch  replay_record_two-tracking.launch
src/tello_pub/: CMakeLists.txt  package.xml  setup.py
src/tello_pub/cfg/: facePoseDbg.yaml  formCtrlDbgInit.yaml  formCtrlDbgInitIdeal-newBodyFrame.yaml  formCtrlDbgInitIdeal.yaml  formCtrlDbgInitRmat-newBodyFrame.yaml  formCtrlDbgInitRmat.yaml  twistGain.yaml  twistGainDefault.yaml  twistGain_0.5.yaml  twistGain_2.0.yaml
src/tello_pub/include/tello_pub/: dronesVIO.h  dronesVIO_ECC24.h  faceOdom.h  formation_ctrl.h  math_utils.h  quat_eskf.h  quat_eskf_full.h  quat_eskf_full_ECC24.h  ros_eigen_dep.h  systemStateEstimation.h
src/tello_pub/launch/: 231101_three_tello_testing.launch  240312_tello_fix_traj_track.launch  240314_odom_compare.launch  eskf_origin.launch  eskf_q.launch  eskf_q4d.launch  face_pose_odom.launch  face_pose_odom_q4d.launch  formation_ctrl.launch  formation_ctrl_twoDrone.launch  formation_debugger.launch  formation_reset_vel.launch  odom_rs.launch  single_spinner_test.launch  tello_drones_odom.launch  tello_em_twoTello.launch  tello_reset_vel_twoTello.launch  tello_waypoint.launch  three_tello_flight.launch
src/tello_pub/msg/: GeometricCtrlDebug.msg  SE3Pose.msg
src/tello_pub/src/: circular_imu_odom.cpp  faceOdom.cpp  face_pose_debugger.cpp  form_ctrl_debugger.cpp  geometricFormCtrl.cpp  geometricFormCtrlTwoDrone.cpp  kf_flight_test_demo.py  multiDroneOdom.cpp  repub_realsense.cpp  singleDroneOdomECC24.cpp  spinner_pub_test.cpp  systemStateEstimation.cpp  tello_em_named.py  tello_fixed_traj_tracker.cpp  tello_manual_pub.py  tello_reset_vel_named.py  tello_three_drone_testing.py  tello_traj_tracking_test.py  tello_waypoint_debugger.py  tello_waypoint_debugger_named.py
src/tello_pub/src/lib/: face_pose_eskf.cpp  quat_eskf_full.cpp  quat_eskf_full_ECC24.cpp
src/tello_sub/: CMakeLists.txt  package.xml
src/tello_sub/include/tello_sub/: sensor_utils.h
src/tello_sub/launch/: aruco_pose_drones.launch  multi_pose_drones.launch  realsense_aruco_pose.launch  tello_smach_twoTello.launch
src/tello_sub/msg/: ArUcoPoseArr.msg  PointArr.msg
src/tello_sub/src/: aruco_pose_realsense.cpp  multiPoseEstimate.cpp  pcl2_sub_test.py  tello_smach_test.py  tello_smach_vel_named.py  tello_smach_vel_test.py
